Added one-by-one flow. Added validation to searchstring and selRepo.

--- a/app/views/error.scala.html
+++ b/app/views/error.scala.html
@@ -3,6 +3,8 @@
 <head>
     <title>Impact Path Flow 1.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/vendor.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/app.js")"></script>
     @*<link rel="icon" href="@routes.Assets.at("images/tab_icon.png")">*@
  
 </head>
@@ -11,14 +13,14 @@
 
 <script type="text/javascript">
 
-        window.onunload = function (event) {
+        $(document).ready(function() {
             var CLIENT_IP='@ajax_CLIENT_IP';
             var myURL='/ajax/'+CLIENT_IP+'/terminateClient';
             $.ajax({
                 url: myURL,
                 async: false
             });
-        };
+        });
 </script>
 
 </body>
