--- a/app/views/vibhor.scala.html
+++ b/app/views/vibhor.scala.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/theme/blue.css")">
     <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/theme/red.css")">
     <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/theme/yellow.css")">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="@routes.Assets.at("javascripts/jquery3.min.js")"></script>
 
 
   </head>
