Disabled main search button

--- a/app/views/vibhor.scala.html
+++ b/app/views/vibhor.scala.html
@@ -820,6 +820,7 @@
             function enableLeftPanel(){ // Disabled if at least 1 level of search is there so that user accidentally does not change the repo of main search string
               document.getElementById("searchString").disabled 	   = false;
               document.getElementById("repoList").disabled 		   = false;
+              document.getElementById("main_search_button").disabled= false;
             }
 
 
