--- a/app/views/vibhor_helper.scala.html
+++ b/app/views/vibhor_helper.scala.html
@@ -94,7 +94,7 @@
 	  
 						<br>
 						<div style="cursor:pointer" onclick="moreOptions()">Advanced Options</div>
-						<button id="main_search_button" type="button" onclick="mainSearch('left','','','')"  class="btn btn-primary" >Search &nbsp<i class="fa fa-search"></i></button>
+						<button id="main_search_button" type="button" onclick="mainSearch('left','','','')"  class="btn btn-primary" disabled>Search &nbsp<i class="fa fa-search"></i></button>
 						@*<button id="main_refresh_button" type="button" onclick="refreshPage()"  style="margin-left:25%" class="btn btn-warning" >New Search &nbsp<i class="fa fa-refresh"></i></button>*@
 					  </div>
 
