--- a/app/views/vibhor_helper.scala.html
+++ b/app/views/vibhor_helper.scala.html
@@ -94,8 +94,9 @@
 	  
 						<br>
 						<div style="cursor:pointer" onclick="moreOptions()">Advanced Options</div>
-						<button id="main_search_button" type="button" onclick="mainSearch('left','','','')"  class="btn btn-primary" disabled>Search &nbsp<i class="fa fa-search"></i></button>
-     					<button id="main_new_search" type="button" onclick="onNewSearchClick()"  class="btn btn-warning" style="margin-left:16%" >New Search &nbsp<i class="fa fa-refresh"></i></button>
+						<button id="main_search_button" type="button" onclick="mainSearch('left','','','')"  class="btn btn-primary" style="width: 100%;margin-left: 0;">Search <i class="fa fa-search"></i></button>
+						<button id="main_new_search" type="button" onclick="onNewSearchClick()"  class="btn btn-warning" style="width: 100%;margin-left: 0" >New Search <i class="fa fa-refresh"></i></button>
+
 
 					</div>
 
